# good_start_habits

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: main.yml
docs/: index.md
docs/explanation/: budget-architecture.md  efficiency-factor.md  habits-and-streaks.md  rotation-and-active-hours.md
docs/how-to/: add-a-habit.md  add-a-spending-category.md  connect-a-bank.md  connect-garmin.md  deploy-to-railway.md  deploy-to-raspberry-pi.md  reclassify-a-transaction.md
docs/reference/: config.md  database.md  routes.md
docs/tutorials/: getting-started.md  raspberry-pi-kiosk.md
src/good_start_habits/: __init__.py  app.py  budget.py  config.py  db.py  garmin.py  habits.py  main.py  state.json  train_times.py  truelayer.py
src/good_start_habits/static/: transitions.css  transitions.js
src/good_start_habits/templates/: base.html  budget.html  clock.html  debug.html  garmin.html  habits.html
tests/: test_budget.py  test_db.py  test_garmin.py  test_habits.py  test_truelayer.py
