[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "good-start-habits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henry Crosswell", email = "henry.crosswell100@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "streamlit-autorefresh>=1.0.1",
]
